--- a/server/Makefile
+++ b/server/Makefile
@@ -38,6 +38,7 @@ deps:
 	$(GOGET) golang.org/x/tools/cmd/goimports
 	$(GOGET) github.com/kisielk/errcheck
 	$(GOGET) gopkg.in/DATA-DOG/go-sqlmock.v1
+	$(GOGET) github.com/go-sql-driver/mysql
 	dep init
 	dep ensure
 
